--- a/flightinfosystem/static/css/style.css
+++ b/flightinfosystem/static/css/style.css
@@ -2,6 +2,34 @@ h1 {
         color: #FCA205;
         align-self: center;
     }
- body {
+body {
         padding-left: 15px;
     }
+/* sop table */
+table.sop {
+    border: 1px double #999999;
+    border-collapse: collapse;
+   }
+table.sop th {
+    text-align: left;
+    background: #2e8ce3;
+    padding: 1px;
+    border: 1px solid #999999;
+	color: #eee;
+	}
+table.sop td {
+    padding: 1px;
+    border: 1px solid #999999;
+   }
+.button {
+	color: #2e8ce3;
+	border: solid 1px #ccc;
+	background: #eee;
+}
+.button:hover {
+	color: black;
+	background: #f47c20;
+}
+.button:active {
+	color: #fcd3a5;
+}
