filter today fix when differens in time plan and others time transition days

--- a/templates/flightinfosystem/checkin-select.html
+++ b/templates/flightinfosystem/checkin-select.html
@@ -14,7 +14,8 @@
                 <th> - </th>
                 <th><b>Код рейса</b></th>
                 <th WIDTH=220><b>Направление</b></th>
-                <th><b>Время<br>вылета</b></th>
+                <th><b>Время вылета<br>по плану</b></th>
+                <th><b>Время вылета<br>расчетное</b></th>
                 <th><b>Начало<br>регистрации</b></th>
                 <th><b>Конец<br>регистрации</b></th>
                 <th><b>Класс<br>регистрации</b></th>
@@ -27,6 +28,7 @@
                 <td> {{ foo.fly }} </td>
                 <td> {{ foo.portdist }} </td>
                 <td> {{ foo.timeplan }}</td>
+                <td> {{ foo.timeexp }}</td>
                 <td> {{ foo.timestartcheckin }}</td>
                 <td> {{ foo.timestopcheckin }}</td>
                 <td>
