--- a/flightinfosystem/templates/flightinfosystem/checkin-select.html
+++ b/flightinfosystem/templates/flightinfosystem/checkin-select.html
@@ -40,6 +40,10 @@
                     </SELECT>
                 </td>
             </tr>
+            {% empty %}
+            <tr>
+                <td colspan="8">Внимание! Список рейсов давно не обновлялся!</td>
+            </tr>
             {% endfor %}
         </table>
         <br>
