--- a/flightinfosystem/templates/flightinfosystem/base.html
+++ b/flightinfosystem/templates/flightinfosystem/base.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <title>FIDS Airport Baikal</title>
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!--<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css"> -->
+    <link rel="stylesheet" href="{% static 'flightinfosystem/css/style.css' %}">
 </head>
 <body>
     <div class="page-header">
