--- a/flightinfosystem/templates/flightinfosystem/index.html
+++ b/flightinfosystem/templates/flightinfosystem/index.html
@@ -7,8 +7,8 @@
 <body>
 <h4><a href="/fids/">Список рейсов.</a></h4>
 <h4><a href="/fids/checkin/">Список стоек регистрации</a></h4>
-<h4><a href="/fids/board/">Список выходов.</a></h4>
-<h4><a href="/fids/baggage/">Список багажных каруселей</a></h4>
+<h4><a href="/fids/boards/">Список выходов.</a></h4>
+
 
 </body>
 </html>
