--- a/flightinfosystem/templates/gate.html
+++ b/flightinfosystem/templates/gate.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <meta content="text/html; charset=Windows-1251" http-equiv="content-type">
+  <meta content="text/html; charset=utf-8" http-equiv="content-type">
   <title></title>
   <style>
    table {
